Update Final Visualising top 5 NASDAQ.ipynb

--- a/Final Visualising top 5 NASDAQ.ipynb
+++ b/Final Visualising top 5 NASDAQ.ipynb
@@ -242,26 +242,26 @@
     "ax1.plot(stock_data['Adj Close']['MSFT'].pct_change())\n",
     "ax1.set_xlabel('Dates')\n",
     "ax1.set_ylabel('Microsoft Price')\n",
-    "ax1.set_title('Microsoft Jan 2019 to July 2019')\n",
+    "ax1.set_title('Microsoft')\n",
     "ax2.plot(stock_data['Adj Close']['AMZN'].pct_change(), color = 'Red')\n",
     "ax2.set_xlabel('Dates')\n",
     "ax2.set_ylabel('Amazon Price')\n",
-    "ax2.set_title('Amazon Jan 2019 to July 2019')\n",
+    "ax2.set_title('Amazon')\n",
     "\n",
     "ax3.plot(stock_data['Adj Close']['GOOG'].pct_change(), color = 'Green')\n",
     "ax3.set_xlabel('Dates')\n",
     "ax3.set_ylabel('Google')\n",
-    "ax3.set_title('Google Jan 2019 to July 2019')\n",
+    "ax3.set_title('Google')\n",
     "\n",
     "ax4.plot(stock_data['Adj Close']['FB'].pct_change(), color = 'Yellow')\n",
     "ax4.set_xlabel('Dates')\n",
     "ax4.set_ylabel('Facebook Price')\n",
-    "ax4.set_title('Facebook Jan 2019 to July 2019')\n",
+    "ax4.set_title('Facebook')\n",
     "\n",
     "ax5.plot(stock_data['Adj Close']['AAPL'].pct_change(), color = 'Black')\n",
     "ax5.set_xlabel('Dates')\n",
     "ax5.set_ylabel('Apple Price')\n",
-    "ax5.set_title('Apple Jan 2019 to July 2019')\n",
+    "ax5.set_title('Apple')\n",
     "\n",
     "\n",
     "plt.show()\n"
